# bitcoin-fold

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/bitcoin/: block_data.rs  header.rs  mod.rs
src/bitcoin/data/: data.json  test_json.rs
